# swagger_full.json
@@ -11,7 +11,7 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3000/api",
+      "url": "http://localhost:8087/api",
       "description": "Servidor de Beta"
     }
   ],
@@ -100,6 +100,13 @@
                     "description": "false ou true",
                     "default": "false"
                   },
+                  "mentions": {
+                    "type": "array",
+                    "description": "[ '5599999999999']",
+                    "items": {
+                      "type": "string"
+                    }
+                  },
                   "delay": {
                     "type": "number",
                     "description": "Delay de mensagem",
@@ -180,6 +187,13 @@
                     "type": "string",
                     "description": "Link ou base64",
                     "default": "https://exemplo.com.br/imagem.png"
+                  },
+                  "mentions": {
+                    "type": "array",
+                    "description": "[ '5599999999999']",
+                    "items": {
+                      "type": "string"
+                    }
                   },
                   "delay": {
                     "type": "number",
@@ -394,38 +408,31 @@
                 "properties": {
                   "to": {
                     "type": "string",
-                    "description": "Número do destinatário",
-                    "default": "5599999999999"
+                    "description": "Número do destinatário"
                   },
                   "document": {
                     "type": "string",
-                    "description": "URL do documento ou base64",
-                    "default": "https://s3.quickgestor.com/dados1921/uploads/PRO.pdf"
+                    "description": "URL do documento ou base64"
                   },
                   "fileName": {
                     "type": "string",
-                    "description": "Nome do arquivo",
-                    "default": "PRO.pdf"
+                    "description": "Nome do arquivo"
                   },
                   "mimetype": {
                     "type": "string",
-                    "description": "Tipo MIME do arquivo",
-                    "default": "pdf"
+                    "description": "Tipo MIME do arquivo"
                   },
                   "caption": {
                     "type": "string",
-                    "description": "Legenda do documento",
-                    "default": "arquivo pdf"
+                    "description": "Legenda do documento"
                   },
                   "delay": {
                     "type": "number",
-                    "description": "Delay em milissegundos",
-                    "default": 1200
+                    "description": "Delay em milissegundos"
                   },
                   "useQueue": {
                     "type": "boolean",
-                    "description": "Usar fila de mensagens",
-                    "default": false
+                    "description": "Usar fila de mensagens"
                   }
                 }
               }
@@ -1042,7 +1049,7 @@
                     "description": "Rejeitar chamadas automaticamente",
                     "default": true
                   },
-                  "msg_rejectCalls": {
+                  "msg_rejectcalls": {
                     "type": "string",
                     "description": "Resposta De regeitar msg",
                     "default": "Não atendemos ligações"
@@ -1408,20 +1415,6 @@
                     "type": "string",
                     "description": "Apikey (ex: 83725a47-fc7a-404a-bbac-206d590bae8f) opcional",
                     "default": "83725a47-fc7a-404a-bbac-206d590bae8f"
-                  },
-                  "numero": {
-                    "type": "string",
-                    "description": "Numero para contato"
-                  },
-                  "criar_sessao": {
-                    "type": "boolean",
-                    "description": "Se true, Criar a conexão com whatsapp",
-                    "default": true
-                  },
-                  "gerar_qrcode": {
-                    "type": "boolean",
-                    "description": "Se true, Gerar qrcode Base64",
-                    "default": true
                   }
                 }
               }
@@ -1446,6 +1439,26 @@
             "ApiKeyAuth": []
           }
         ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "sessionId"
+                ],
+                "properties": {
+                  "numero": {
+                    "type": "string",
+                    "description": "NUmero de whatsapp para conectar com via codigo",
+                    "default": "5521999999999"
+                  }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Você recebe um base64 com qrcode"
@@ -1954,6 +1967,48 @@
         "responses": {
           "200": {
             "description": "Nome do grupo atualizado com sucesso"
+          }
+        }
+      }
+    },
+    "/group/up-setting": {
+      "post": {
+        "summary": "Fechar/Abrir grupo",
+        "tags": [
+          "Grupos"
+        ],
+        "security": [
+          {
+            "ApiKeyAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "groupJid",
+                  "subject"
+                ],
+                "properties": {
+                  "groupJid": {
+                    "type": "string",
+                    "description": "JID do grupo"
+                  },
+                  "subject": {
+                    "type": "string",
+                    "description": "announcement/not_announcement"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Grupo aberto/fechado com sucesso"
           }
         }
       }
